# loco_hd

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PY_SCRIPTS.md  README.md  loco_hd.pyi  pyproject.toml  test.py
.env_3.8/: pyvenv.cfg
.github/workflows/: CI.yml
loco_hd/: __init__.py  __main__.py  atom_converter_utils.py  loco_hd.pyi
primitive_typings/: all_atom.config.json  coarse_grained_with_centroid.config.json
python_codes/: analyze_singles.py  arc_test.py  atom_converter_utils.py  casp14_compare_structures.py  casp14_predictor_extractor.py  casp14_predictor_test.py  compare_ensembles.py  compare_h5_batch.py  kras_scan.py  pisces_downloader.py  pisces_random_pairs.py  pisces_random_pairs_analyse.py  pisces_random_pairs_analyze.py  pisces_ring_analysis.py  prion_dimer_test.py  prion_mutant_test.py  simple_test.py  test_integrators.py  trajectory_analyzer.py
python_codes/casp14/: SCRIPT_ORDER.md  casp14_compare_specific_structures.py  casp14_compare_structures.py  casp14_create_data_for_ost.py  casp14_extend_with_locohd.py  casp14_ost_target_script.py  casp14_plotting.py  casp14_predictor_extractor.py  casp14_predictor_test.py  casp14_statistics.py  casp14_tarfile_structure_extractor.py  config.py  utils.py
python_codes/casp14/for_openstructure/: casp14_pickle_to_pdbstr.py  openstructure_target.py  run_openstructure_target.py
python_codes/casp14/tarfile_structure_extractor_utils/: __init__.py  chain_ops.py  fake_io_handler.py  filter_children.py  inline_pdb_parser.py  normalize_ref_structures.py  rename_nameless_chains.py  repair_chain_correspondence.py  stringify_structures.py  structure_readers.py
python_codes/ensembles/: compare_ensembles.py
python_codes/mutant_analysis/: mutant_analysis.py
python_codes/pisces/: pisces_downloader.py  pisces_random_pairs.py  pisces_random_pairs_analyze.py  pisces_ring_analysis.py  pisces_utils.py
python_codes/primitive_typings/: all_atom.config.json  all_atom_with_centroid.config.json  atom_converter_config1  atom_converter_config1.json  atom_converter_config2  coarse_grained.config.json  coarse_grained_with_centroid.config.json
src/: lib.rs  locohd.rs  weight_functions.rs
src/locohd/: locohd_utests.rs  pmf.rs  pmf_utests.rs  primitive_atom.rs  tag_pairing_rule.rs  utils.rs  weight_function.rs  weight_function_utests.rs
src/locohd/pmf/: statistical_distances.rs
src/locohd/weight_function/: cdfs.rs
tests/: generate_locohd_testcases.py  test_locohd.py  test_tag_pairing_rule.py  test_wfs.py
tests/test_data/: test_input_collection_241212_131752.pickle  test_input_collection_250605_114749.pickle
