[package]
name = "loco_hd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loco_hd"  # LoCoHD = Local Composition Hellinger Distance
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies.rayon]
version = "1.7.0"

[dependencies.kd-tree]
version = "0.5.1"

[dependencies.typenum]
version = "1.16.0"