[package]
name = "loco_hd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loco_hd"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.25.0"
features = ["extension-module"]

[dependencies.rayon]
version = "1.10.0"

[dependencies.kd-tree]
version = "0.6.0"

# This is required for the KdPoint trait implementation.
[dependencies.typenum]
version = "1.17.0"